applications/todo-redhat/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-redhat
spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-redhat

  template:
    metadata:
      labels:
        app: todo-redhat

    spec:
      containers:
        - name: todo-redhat

          image: image-registry.openshift-image-registry.svc:5000/openshift/redhat-todo
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 256Mi

          readinessProbe:
            httpGet:
              path: /
              port: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
