applications/todo-redhat/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-redhat
spec:
  selector:
    app: todo-redhat
  ports:
    - name: http
      port: 80
      targetPort: 8080
