applications/todo-redhat/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-redhat

spec:
  to:
    kind: Service
    name: todo-redhat

  port:
    targetPort: http
